--- a/resources/index.html
+++ b/resources/index.html
@@ -13,49 +13,86 @@
 
     <h1>Useful Resources</h1>
 
-    <h2>Programming</h2>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/_M4o0ExLQCs" title="YouTube video player"
+    <h2>Inspiration</h2>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/pxBQLFLei70" title="Dont ring the bell"
       frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
       allowfullscreen></iframe>
 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/tWn8RA_DEic" title="YouTube video player"
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/yX39J_YyKbs" title="I am the champion"
       frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
       allowfullscreen></iframe>
+
+
+    <h2>Programming - Testing and Practice</h2>
+
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/_M4o0ExLQCs" title="Get Kata"
+      frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen></iframe>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/tWn8RA_DEic" title="Kevlin Henney"
+      frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen></iframe>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/EZ05e7EMOLM" title="Ian Cooper" frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen></iframe>
+
+
+
 
     <h2>Business</h2>
 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/RpH6IPhyh7I" title="YouTube video player"
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/RpH6IPhyh7I" title="Scott Hanselman"
       frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
       allowfullscreen></iframe>
 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/n_yHZ_vKjno" title="YouTube video player"
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/n_yHZ_vKjno" title="Growth"
       frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
       allowfullscreen></iframe>
 
-    <h2>Web Development</h2>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/LMb_4OBgWIY" title="Steve Ballmer"
+      frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen></iframe>
+
+    <h2>Programming - C#</h2>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/wgHIkdUQbp0" title="Minsk" frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen></iframe>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/qJAICCTPhcE" title="Trains.net" frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen></iframe>
+
+
+    <h2>Programming - Web Development</h2>
     <ul>
       <li><a href="https://material-ui.com/">Material UI Components</a></li>
     </ul>
 
 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/w1nhwUGsG6M" title="YouTube video player"
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/w1nhwUGsG6M" title="CSS Typing"
       frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
       allowfullscreen></iframe>
 
 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/6xNcXwC6ikQ" title="YouTube video player"
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/6xNcXwC6ikQ" title="CSS Neon Button"
       frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
       allowfullscreen></iframe>
 
-    <h2>Python</h2>
+
+
+
+    <h2>Programming - Python</h2>
 
     <ul>
       <li><a href="https://github.com/sqlalchemy/alembic">alembic for sqlalchemy migrations</a></li>
     </ul>
 
 
-
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/cKPlPJyQrt4" title="YouTube video player"
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/cKPlPJyQrt4" title="James Powell"
       frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
       allowfullscreen></iframe>
 
