--- a/resources/index.html
+++ b/resources/index.html
@@ -23,9 +23,18 @@
       frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
       allowfullscreen></iframe>
 
+    <h2>Sudoku</h2>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/IE1N6B6SHQA" title="YouTube video player"
+      frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen></iframe>
+
+    <h2>Electronics</h2>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/HyznrdDSSGM" title="YouTube video player"
+      frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen></iframe>
 
     <h2>Programming - Testing and Practice</h2>
-
 
     <iframe width="560" height="315" src="https://www.youtube.com/embed/_M4o0ExLQCs" title="Get Kata" frameborder="0"
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -53,6 +62,10 @@
       allowfullscreen></iframe>
 
     <iframe width="560" height="315" src="https://www.youtube.com/embed/LMb_4OBgWIY" title="Steve Ballmer"
+      frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen></iframe>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/-c-SUdBoD6M" title="YouTube video player"
       frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
       allowfullscreen></iframe>
 
