--- a/running/index.html
+++ b/running/index.html
@@ -38,6 +38,7 @@
                 <li><input class="route" type="checkbox" value="1066.xml" data-colour="#8000ff">1066</input></li>
                 <li><input class="route" type="checkbox" value="ArcOfAttrition.xml" data-colour="#8000ff">Arc of Attrition</input></li>
                 <li><input class="route" type="checkbox" value="Hornsea_to_York_along_the_Trans_Pennine_Trail.xml" data-colour="#ff0080">Hornsea to York (Trans-pennine trail)</input></li>
+                <li><input class="route" type="checkbox" value="ebor_way_Ilkley_to_york_section.xml" data-colour="#ff008f">Ebor Way (Ilkley to York section) </input></li>
             </ul>
             </div>
         </div>
