--- a/resources/index.html
+++ b/resources/index.html
@@ -109,6 +109,9 @@
       frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
       allowfullscreen></iframe>
 
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/pkCLMl0e_0k" title="David Beazley - Lambda Calculus from the Ground Up - PyCon 2019"
+      frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen></iframe>
 
     <h2>Microsoft Graph</h2>
     <ul>
