--- a/running/index.html
+++ b/running/index.html
@@ -19,7 +19,6 @@
                 <!-- https://www.w3schools.com/colors/colors_picker.asp -->
                 <li><input class="route" type="checkbox" value="Leeds_to_York.xml" data-colour="#ff0000">Leeds to York (Aire and Calder Navigation)</input></li>
                 <li><input class="route" type="checkbox" value="leedsandliverpoolcanal.xml" data-colour="#ff4000">Liverpool To Leeds Canal Race</input></li>
-                <li><input class="route" type="checkbox" value="York_To_Doncaster.xml" data-colour="#ff8000">York To Doncaster (Sustrans Route)</input></li>
                 <li><input class="route" type="checkbox" value="White_Rose_Ultra.xml" data-colour="#ffbf00">White Rose Ultra 100 Miles (Three laps of 30 + a bit)</input></li>
                 <li><input class="route" type="checkbox" value="3_Peaks.xml" data-colour="#ffff00">3 Peaks</input></li>
                 <li><input class="route" type="checkbox" value="Spine2018.xml" data-colour="#bfff00">Spine Race (2018)</input></li>
@@ -37,8 +36,10 @@
                 <li><input class="route" type="checkbox" value="Foss_Way.xml" data-colour="#4000ff">Foss Walk</input></li>
                 <li><input class="route" type="checkbox" value="1066.xml" data-colour="#8000ff">1066</input></li>
                 <li><input class="route" type="checkbox" value="ArcOfAttrition.xml" data-colour="#8000ff">Arc of Attrition</input></li>
-                <li><input class="route" type="checkbox" value="Hornsea_to_York_along_the_Trans_Pennine_Trail.xml" data-colour="#ff0080">Hornsea to York (Trans-pennine trail)</input></li>
                 <li><input class="route" type="checkbox" value="ebor_way_Ilkley_to_york_section.xml" data-colour="#ff008f">Ebor Way (Ilkley to York section) </input></li>
+                <li><input class="route" type="checkbox" value="Hornsea_to_York_along_the_Trans_Pennine_Trail.xml" data-colour="#ffbf00">Hornsea to York (Trans-pennine trail)</input></li>
+                <li><input class="route" type="checkbox" value="York_To_Doncaster.xml" data-colour="#00ffbf">York To Doncaster (Trans-pennine trail)</input></li>
+                <li><input class="route" type="checkbox" value="Doncaster_to_Meadowhall_TPT.xml" data-colour="#ff8000">Doncaster to Meadowhall (Trans-pennine trail)</input></li>                
             </ul>
             </div>
         </div>
