dales high way1

--- a/running/index.html
+++ b/running/index.html
@@ -36,7 +36,10 @@
                 <li><input class="route" type="checkbox" value="Foss_Way.xml" data-colour="#4000ff">Foss Walk</input></li>
                 <li><input class="route" type="checkbox" value="1066.xml" data-colour="#8000ff">1066</input></li>
                 <li><input class="route" type="checkbox" value="ArcOfAttrition.xml" data-colour="#8000ff">Arc of Attrition</input></li>
+
                 <li><input class="route" type="checkbox" value="ebor_way_Ilkley_to_york_section.xml" data-colour="#ff008f">Ebor Way (Ilkley to York section) </input></li>
+                <li><input class="route" type="checkbox" value="Dales_high_way_to_Skipton_and_the_Leeds_Liverpool_canal_back.xml" data-colour="#ff8000">Dales High way to Skipton loop</input></li>
+                
                 <li><input class="route" type="checkbox" value="Hornsea_to_York_along_the_Trans_Pennine_Trail.xml" data-colour="#ffbf00">Hornsea to York (Trans-pennine trail)</input></li>
                 <li><input class="route" type="checkbox" value="York_To_Doncaster.xml" data-colour="#00ffbf">York To Doncaster (Trans-pennine trail)</input></li>
                 <li><input class="route" type="checkbox" value="Doncaster_to_Meadowhall_TPT.xml" data-colour="#ff8000">Doncaster to Meadowhall (Trans-pennine trail)</input></li>                
