--- a/running/index.html
+++ b/running/index.html
@@ -38,6 +38,7 @@
 
                 <div class="sectionHeader">Exploring</div>                
                 <ul>
+                    <li><input class="route" type="checkbox" value="Marsden_to_Hebden_Bridge_the_other_way.gpx" data-colour="#ff0000">Marsden to Hebden Bridge along canals</input></li>
                     <li><input class="route" type="checkbox" value="Leeds_to_York.xml" data-colour="#ff0000">Leeds to York (Aire and Calder Navigation)</input></li>
                     <li><input class="route" type="checkbox" value="3_Peaks.xml" data-colour="#ffff00">3 Peaks</input></li>
                     <li><input class="route" type="checkbox" value="EdaleSkyline.xml" data-colour="#40ff00">Edale Skyline</input></li>
