--- a/resources/index.html
+++ b/resources/index.html
@@ -80,6 +80,12 @@
       allowfullscreen></iframe>
 
 
+    <h2>Programming - General</h2>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/srQt1NAHYC0" title="Functional Design Patterns "
+      frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen></iframe>
+
     <h2>Programming - Web Development</h2>
     <ul>
       <li><a href="https://material-ui.com/">Material UI Components</a></li>
@@ -109,8 +115,9 @@
       frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
       allowfullscreen></iframe>
 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/pkCLMl0e_0k" title="David Beazley - Lambda Calculus from the Ground Up - PyCon 2019"
-      frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/pkCLMl0e_0k"
+      title="David Beazley - Lambda Calculus from the Ground Up - PyCon 2019" frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
       allowfullscreen></iframe>
 
     <h2>Microsoft Graph</h2>
