--- a/running/index.html
+++ b/running/index.html
@@ -34,6 +34,9 @@
                     <li><input class="route" type="checkbox" value="efm_2017.xml" data-colour="#0040ff">Meriden to Doncaster (Escape From Meriden 2017)</input></li>
                     <li><input class="route" type="checkbox" value="1066.xml" data-colour="#8000ff">1066</input></li>
                     <li><input class="route" type="checkbox" value="ArcOfAttrition.xml" data-colour="#8000ff">Arc of Attrition</input></li>
+
+                    <li><input class="route" type="checkbox" value="PD100_Part1.gpx" data-colour="#ff4000">Peak District 100 - Part 1</input></li>
+                    <li><input class="route" type="checkbox" value="PD100_Part2.gpx" data-colour="#ff4000">Peak District 100 - Part 2</input></li>
                 </ul>
 
                 <div class="sectionHeader">Exploring</div>                
