--- a/running/index.html
+++ b/running/index.html
@@ -37,9 +37,11 @@
 
                     <li><input class="route" type="checkbox" value="PD100_Part1.gpx" data-colour="#ff4000">Peak District 100 - Part 1</input></li>
                     <li><input class="route" type="checkbox" value="PD100_Part2.gpx" data-colour="#ff4000">Peak District 100 - Part 2</input></li>
+
+                    <li><input class="route" type="checkbox" value="south_downs_100.gpx" data-colour="#ff4000">South Downs 100</input></li>
                 </ul>
 
-                <div class="sectionHeader">Exploring</div>                
+                <div class="sectionHeader">Exploring</div>
                 <ul>
                     <li><input class="route" type="checkbox" value="Selby_to_Leeds.xml" data-colour="#00bfff">Selby To Leeds</input></li>
                     <li><input class="route" type="checkbox" value="Marsden_to_Hebden_Bridge_the_other_way.gpx" data-colour="#ff0000">Marsden to Hebden Bridge along canals</input></li>
