--- a/running/index.html
+++ b/running/index.html
@@ -35,9 +35,7 @@
                     <li><input class="route" type="checkbox" value="1066.xml" data-colour="#8000ff">1066</input></li>
                     <li><input class="route" type="checkbox" value="ArcOfAttrition.xml" data-colour="#8000ff">Arc of Attrition</input></li>
 
-                    <li><input class="route" type="checkbox" value="PD100_Part1.gpx" data-colour="#ff4000">Peak District 100 - Part 1</input></li>
-                    <li><input class="route" type="checkbox" value="PD100_Part2.gpx" data-colour="#ff4000">Peak District 100 - Part 2</input></li>
-
+                    <li><input class="route" type="checkbox" value="The_Peak_District_100_2022.gpx" data-colour="#ff4000">Peak District 100</input></li>
                     <li><input class="route" type="checkbox" value="south_downs_100.gpx" data-colour="#ff4000">South Downs 100</input></li>
                 </ul>
 
