--- a/index.html
+++ b/index.html
@@ -1,24 +1,55 @@
----
-layout: default
-title: Mr Betteridge
----
-<div class="blurb">
+<!DOCTYPE html>
+<html lang="en">
 
-	<h2>New Job</h2>
-	I've recently joined <a href="https://www.hivemap.io/">Hivemap</a> as their lead software architect.  It's a busy time as I'm learning both a new business domain and technologies (Python, AWS etc)
+<head>
+    <meta charset="UTF-8">
+    <title>Mr David Betteridge</title>
+    <link rel="stylesheet" type="text/css" href="index.css">
+</head>
 
-	<h2>Running</h2>
-	If all goes to plan then my next race is the <a href="https://www.hardmoors110.org.uk/hardmoors-160/">The Hardmoors 160</a>, at the end of May.
+<body>
+    <div class="container">
+        <div class="item-header_logo">
+            <a href="/about/index"><img src="images/david_betteridge.png" alt="Mr David Betteridge"
+                    class="top_left_logo"></a>
+        </div>
+        <div class="item-header_text">
+            David Betteridge
+        </div>
+        <div class="item-sidebar">
+            <ul>
+                <li><a href="/about/index">About me</a></li>
+                <li><a href="">My running</a></li>
+                <li><a href="">Family bike rides</a></li>
+                <li><a href="">My blog</a></li>
+                <li><a href="">York Code Dojo</a></li>
+                <li><a href="">York Developers</a></li>
+                <li><a href="">My github account</a></li>
+                <li><a href="">Some useful resources</a></li>
+            </ul>
+        </div>
+        <div class="item-content">
+            <div class="content-container">
+                I work as a Senior Technical Architect for a startup called <a target="_blank" href="https://hivemap.io">Hivemap.</a> We
+                use a range of technolgies which include Python, Postgres, AWS, React.js, S3, Elasticsearch and Neptune.
+                <p>
+
+                    Prior to working at Hivemap, I worked for several years for the Proactis Group producing
+                    e-procurement software. During this time I provided solutions for a range of global companies
+                    including, universities, large charities, city banks and housing trusts.
+                </p>
+                <hr>
+                I am a co-founder of the York Developers charity, which arranges technical meetups and events in York.
+                These include a monthly Code Dojo where attendees pair up and work on a new problem each month.
+                I have spoken a number of times at community usergroups 
+                <hr>
+                In my free time I'm a keen runner and have competed in several ultra-marathons.  These include the Winner Spine Race,  the Hardmoors 200 and the Arc of Attrition.  More information about my running can be found <a href="/running/">here</a>.
+            </div>
 
 
-	<h2>YouTube</h2>
-	I've recently completed recording a series of short videos demonstrating how to write a compiler for bf.net language using C#.  These can be found on my <a href="https://www.youtube.com/channel/UC1OfNaKKT8O3ft0cQFnOJhg">YouTube channel.</a>
+        </div>
+    </div>
 
+</body>
 
-	<h2>Side Projects</h2>
-	In my spare time I'm working on `Project Venimus` which is a social platform for arranging community events and groups.  This is written in C# using TDD, .netcore 3.1 (and Razor Pages),  MongoDB for storage, Auth0 for authentication and built with Azure DevOps Pipelines and deployed on Azure using docker containers!
-
-	<h2>Proactis</h2>
-	My previous job (of many years) was working at Proactis Ltd.  My final project was working on the <a href="https://www.bepayd.com/">BePayd</a>  product.   
-
-</div><!-- /.blurb -->
+</html>
