--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Mr David Betteridge</title>
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="/index.css">
 </head>
 
 <body>
     <div class="container">
         <div class="item-header_logo">
-            <a href="/about/index"><img src="images/david_betteridge.png" alt="Mr David Betteridge"
+            <a href="/about/index"><img src="/images/david_betteridge.png" alt="Mr David Betteridge"
                     class="top_left_logo"></a>
         </div>
         <div class="item-header_text">
@@ -18,35 +18,26 @@
         </div>
         <div class="item-sidebar">
             <ul>
-                <li><a href="/about/index">About me</a></li>
-                <li><a href="">My running</a></li>
-                <li><a href="">Family bike rides</a></li>
-                <li><a href="">My blog</a></li>
-                <li><a href="">York Code Dojo</a></li>
-                <li><a href="">York Developers</a></li>
-                <li><a href="">My github account</a></li>
-                <li><a href="">Some useful resources</a></li>
+                <li><a href="/index.html">About me</a></li>
+                <li><a href="/target_files/running.html">My running</a></li>
+                <li><a href="/familybikerides/index.html">Family bike rides</a></li>
+                <li><a href="/blog">My blog</a></li>
+                <li><a href="https://www.meetup.com/York-Code-Dojo/">York Code Dojo</a></li>
+                <li><a href="https://yorkdevelopers.org">York Developers</a></li>
+                <li><a href="https://github.com/DavidBetteridge">My github account</a></li>
+                <li><a href="/resources">Some useful resources</a></li>
             </ul>
         </div>
         <div class="item-content">
             <div class="content-container">
-                I work as a Senior Technical Architect for a startup called <a target="_blank" href="https://hivemap.io">Hivemap.</a> We
-                use a range of technolgies which include Python, Postgres, AWS, React.js, S3, Elasticsearch and Neptune.
-                <p>
-
-                    Prior to working at Hivemap, I worked for several years for the Proactis Group producing
-                    e-procurement software. During this time I provided solutions for a range of global companies
-                    including, universities, large charities, city banks and housing trusts.
-                </p>
-                <hr>
-                I am a co-founder of the York Developers charity, which arranges technical meetups and events in York.
-                These include a monthly Code Dojo where attendees pair up and work on a new problem each month.
-                I have spoken a number of times at community usergroups 
-                <hr>
-                In my free time I'm a keen runner and have competed in several ultra-marathons.  These include the Winner Spine Race,  the Hardmoors 200 and the Arc of Attrition.  More information about my running can be found <a href="/running/">here</a>.
+                <p>I work as a Senior Technical Architect for a startup called <a href="https://hivemap.io">Hivemap.</a> We use a range of technolgies which include Python, Postgres, AWS, React.js, S3, Elasticsearch and Neptune.</p>
+<p>Prior to working at Hivemap, I worked for several years for the Proactis Group producing
+e-procurement software. During this time I provided solutions for a range of global companies including universities, large charities, city banks, and housing trusts.</p>
+<p>I am a co-founder of the York Developers charity, which arranges technical meetups and events in York.
+These include a monthly Code Dojo where attendees pair up and work on a new problem each month.</p>
+<p>I have spoken a number of times at community usergroups 
+In my free time I'm a keen runner and have competed in several ultra-marathons.  These include the Winter Spine Race,  the Hardmoors 200 and the Arc of Attrition.  More information about my running can be found <a href="/running/">here</a>.</p>
             </div>
-
-
         </div>
     </div>
 
