--- a/template.html
+++ b/template.html
@@ -21,7 +21,7 @@
                 <li><a href="/index.html">About me</a></li>
                 <li><a href="/target_files/running.html">My running</a></li>
                 <li><a href="/familybikerides/index.html">Family bike rides</a></li>
-                <li><a href="/blog">My blog</a></li>
+                <li><a href="/target_files/blogs.html">My blog</a></li>
                 <li><a href="https://www.meetup.com/York-Code-Dojo/">York Code Dojo</a></li>
                 <li><a href="https://yorkdevelopers.org">York Developers</a></li>
                 <li><a href="https://github.com/DavidBetteridge">My github account</a></li>
