--- a/target_files/peak_district_100.html
+++ b/target_files/peak_district_100.html
@@ -18,14 +18,14 @@
         </div>
         <div class="item-sidebar">
             <ul>
-                <li><a href="/about/index">About me</a></li>
-                <li><a href="">My running</a></li>
-                <li><a href="">Family bike rides</a></li>
-                <li><a href="">My blog</a></li>
-                <li><a href="">York Code Dojo</a></li>
-                <li><a href="">York Developers</a></li>
-                <li><a href="">My github account</a></li>
-                <li><a href="">Some useful resources</a></li>
+                <li><a href="/index.html">About me</a></li>
+                <li><a href="/target_files/running.html">My running</a></li>
+                <li><a href="/familybikerides/index.html">Family bike rides</a></li>
+                <li><a href="/target_files/blogs.html">My blog</a></li>
+                <li><a href="https://www.meetup.com/York-Code-Dojo/">York Code Dojo</a></li>
+                <li><a href="https://yorkdevelopers.org">York Developers</a></li>
+                <li><a href="https://github.com/DavidBetteridge">My github account</a></li>
+                <li><a href="/resources">Some useful resources</a></li>
             </ul>
         </div>
         <div class="item-content">
