--- a/target_files/running.html
+++ b/target_files/running.html
@@ -18,20 +18,20 @@
         </div>
         <div class="item-sidebar">
             <ul>
-                <li><a href="/about/index">About me</a></li>
-                <li><a href="">My running</a></li>
-                <li><a href="">Family bike rides</a></li>
-                <li><a href="">My blog</a></li>
-                <li><a href="">York Code Dojo</a></li>
-                <li><a href="">York Developers</a></li>
-                <li><a href="">My github account</a></li>
-                <li><a href="">Some useful resources</a></li>
+                <li><a href="/index.html">About me</a></li>
+                <li><a href="/target_files/running.html">My running</a></li>
+                <li><a href="/familybikerides/index.html">Family bike rides</a></li>
+                <li><a href="/target_files/blogs.html">My blog</a></li>
+                <li><a href="https://www.meetup.com/York-Code-Dojo/">York Code Dojo</a></li>
+                <li><a href="https://yorkdevelopers.org">York Developers</a></li>
+                <li><a href="https://github.com/DavidBetteridge">My github account</a></li>
+                <li><a href="/resources">Some useful resources</a></li>
             </ul>
         </div>
         <div class="item-content">
             <div class="content-container">
                 <h1>Running</h1>
-<p>In my free time I'm a keen runner and have competed in several ultra-marathons. These include the Winner Spine Race,  the Hardmoors 200 and the Arc of Attrition.</p>
+<p>In my free time I'm a keen runner and have competed in several ultra-marathons. These include the Winter Spine Race,  the Hardmoors 200 and the Arc of Attrition.</p>
 <p>Most of my runs can be found on <a href="https://www.strava.com/athletes/6352224">Strava</a></p>
 <p>I've been plotting my more interesting (and longer runs) on a <a href="/running/index.html">map.</a></p>
 <p>During the Summer of 2022 I (accidently) entered two 100 mile races a week apart. These were the <a href="/target_files/peak_district_100.html">Peak District 100</a> and <a href="/target_files/south_downs_100.html">South Downs 100</a></p>
