--- a/target_blog_posts/2018-07-22-Cake.html
+++ b/target_blog_posts/2018-07-22-Cake.html
@@ -18,7 +18,7 @@
         </div>
         <div class="item-sidebar">
             <ul>
-                <li><a href="/index.html">About me</a></li>
+                <li><a href="/target_files/about.html">About me</a></li>
                 <li><a href="/target_files/running.html">My running</a></li>
                 <li><a href="/familybikerides/index.html">Family bike rides</a></li>
                 <li><a href="/target_files/blogs.html">My blog</a></li>
@@ -30,11 +30,7 @@
         </div>
         <div class="item-content">
             <div class="content-container">
-                <hr />
-<p>layout: post
-title: Using Cake With TeamCity</p>
-<hr />
-<p>We have been successfully using TeamCity to build one of our main products for the last year.  Although we were fairly happy with the process there was a few concerns around the solution.</p>
+                <p>We have been successfully using TeamCity to build one of our main products for the last year.  Although we were fairly happy with the process there was a few concerns around the solution.</p>
 <ol>
 <li>
 <p>The steps required to create a build are spread out in TeamCity as a series of settings,  batch files and shell (dos) commands.  This meant that before making large configuration changes we had to backup TeamCity and then hope for the best.  This meant that we tended to avoid making major improvements to the process for fear of breaking something.</p>
