--- a/target_blog_posts/2019-01-09-Blog.html
+++ b/target_blog_posts/2019-01-09-Blog.html
@@ -18,7 +18,7 @@
         </div>
         <div class="item-sidebar">
             <ul>
-                <li><a href="/index.html">About me</a></li>
+                <li><a href="/target_files/about.html">About me</a></li>
                 <li><a href="/target_files/running.html">My running</a></li>
                 <li><a href="/familybikerides/index.html">Family bike rides</a></li>
                 <li><a href="/target_files/blogs.html">My blog</a></li>
@@ -30,11 +30,7 @@
         </div>
         <div class="item-content">
             <div class="content-container">
-                <hr />
-<p>layout: post
-title: Setting up DavidBetteridge.net</p>
-<hr />
-<p>Some notes so that I remember what I did!</p>
+                <p>Some notes so that I remember what I did!</p>
 <h2>Domain Name</h2>
 <p>I purchased the domain name from 123-reg</p>
 <h2>Cloudflare</h2>
