--- a/target_blog_posts/2019-01-11-Base64Encoding.html
+++ b/target_blog_posts/2019-01-11-Base64Encoding.html
@@ -18,7 +18,7 @@
         </div>
         <div class="item-sidebar">
             <ul>
-                <li><a href="/index.html">About me</a></li>
+                <li><a href="/target_files/about.html">About me</a></li>
                 <li><a href="/target_files/running.html">My running</a></li>
                 <li><a href="/familybikerides/index.html">Family bike rides</a></li>
                 <li><a href="/target_files/blogs.html">My blog</a></li>
@@ -30,11 +30,7 @@
         </div>
         <div class="item-content">
             <div class="content-container">
-                <hr />
-<p>layout: post
-title: Base64 Encoding</p>
-<hr />
-<h2>Encoding</h2>
+                <h2>Encoding</h2>
 <p>Following on from yesterday's Huffman coding,  I thought that I would write a Base64 encoder in C#.</p>
 <p>At first glance this seems straight forward</p>
 <ol>
