--- a/target_blog_posts/2019-01-26-Async-Await-Part2.html
+++ b/target_blog_posts/2019-01-26-Async-Await-Part2.html
@@ -18,7 +18,7 @@
         </div>
         <div class="item-sidebar">
             <ul>
-                <li><a href="/index.html">About me</a></li>
+                <li><a href="/target_files/about.html">About me</a></li>
                 <li><a href="/target_files/running.html">My running</a></li>
                 <li><a href="/familybikerides/index.html">Family bike rides</a></li>
                 <li><a href="/target_files/blogs.html">My blog</a></li>
@@ -30,11 +30,7 @@
         </div>
         <div class="item-content">
             <div class="content-container">
-                <hr />
-<p>layout: post
-title: Async and Await in C# - Part 2</p>
-<hr />
-<p>Create a console app with the following code.  (You will need to set the language version to C# 7.1 or greater)</p>
+                <p>Create a console app with the following code.  (You will need to set the language version to C# 7.1 or greater)</p>
 <p>```c#
 static async Task Main(string[] args)
 {
