--- a/target_blog_posts/2019-01-26-Async-Await.html
+++ b/target_blog_posts/2019-01-26-Async-Await.html
@@ -18,7 +18,7 @@
         </div>
         <div class="item-sidebar">
             <ul>
-                <li><a href="/index.html">About me</a></li>
+                <li><a href="/target_files/about.html">About me</a></li>
                 <li><a href="/target_files/running.html">My running</a></li>
                 <li><a href="/familybikerides/index.html">Family bike rides</a></li>
                 <li><a href="/target_files/blogs.html">My blog</a></li>
@@ -30,11 +30,7 @@
         </div>
         <div class="item-content">
             <div class="content-container">
-                <hr />
-<p>layout: post
-title: Async and Await in C#</p>
-<hr />
-<h2>Overview</h2>
+                <h2>Overview</h2>
 <p>I've been asked a couple of times recently about async/await in C# as some developers feel they don't understand it enough to use it in production code.</p>
 <h2>ConfigureAwait</h2>
 <p>The easiest way to demonstrate this is by writing an application which has a UI.   Create a new Windows Forms project and then add a form with a button and a few labels.  (As shown below)</p>
