--- a/target_blog_posts/2019-01-30-Chaining_Tasks.html
+++ b/target_blog_posts/2019-01-30-Chaining_Tasks.html
@@ -18,7 +18,7 @@
         </div>
         <div class="item-sidebar">
             <ul>
-                <li><a href="/index.html">About me</a></li>
+                <li><a href="/target_files/about.html">About me</a></li>
                 <li><a href="/target_files/running.html">My running</a></li>
                 <li><a href="/familybikerides/index.html">Family bike rides</a></li>
                 <li><a href="/target_files/blogs.html">My blog</a></li>
@@ -30,11 +30,7 @@
         </div>
         <div class="item-content">
             <div class="content-container">
-                <hr />
-<p>layout: post
-title: Chaining Tasks</p>
-<hr />
-<p>The <strong>await</strong> keyword makes it very easy for us to call multiple async methods from within a single method.  For example</p>
+                <p>The <strong>await</strong> keyword makes it very easy for us to call multiple async methods from within a single method.  For example</p>
 <p>```c#
 static async Task Main(string[] args)
 {
