--- a/target_blog_posts/2019-02-17-how_does_await_work.html
+++ b/target_blog_posts/2019-02-17-how_does_await_work.html
@@ -18,7 +18,7 @@
         </div>
         <div class="item-sidebar">
             <ul>
-                <li><a href="/index.html">About me</a></li>
+                <li><a href="/target_files/about.html">About me</a></li>
                 <li><a href="/target_files/running.html">My running</a></li>
                 <li><a href="/familybikerides/index.html">Family bike rides</a></li>
                 <li><a href="/target_files/blogs.html">My blog</a></li>
@@ -30,11 +30,7 @@
         </div>
         <div class="item-content">
             <div class="content-container">
-                <hr />
-<p>layout: post
-title: How does await work?</p>
-<hr />
-<h2>How does the C# compiler convert</h2>
+                <h2>How does the C# compiler convert</h2>
 <p><code>c#
 var z = 1;
 var a = await A(z);
