--- a/target_files/about.html
+++ b/target_files/about.html
@@ -30,13 +30,15 @@
         </div>
         <div class="item-content">
             <div class="content-container">
-                <p>I work as a Senior Technical Architect for a startup called <a href="https://hivemap.io">Hivemap.</a> We use a range of technolgies which include Python, Postgres, AWS, React.js, S3, Elasticsearch and Neptune.</p>
-<p>Prior to working at Hivemap, I worked for several years for the Proactis Group producing
-e-procurement software. During this time I provided solutions for a range of global companies including universities, large charities, city banks, and housing trusts.</p>
-<p>I am a co-founder of the York Developers charity, which arranges technical meetups and events in York.
-These include a monthly Code Dojo where attendees pair up and work on a new problem each month.</p>
-<p>I have spoken a number of times at community usergroups 
-In my free time I'm a keen runner and have competed in several ultra-marathons.  These include the Winter Spine Race,  the Hardmoors 200 and the Arc of Attrition.  More information about my running can be found <a href="/running/">here</a>.</p>
+                <p>Hi,  I'm one of the co-founders/treasurer of <a href="https://YorkDevelopers.org">YorkDevelopers.org</a> and also organise the monthly YorkCodeDojo meetup.</p>
+<h3>Skills</h3>
+<p>I've got over 20 years of experience as a professional software developer.  During that time I've used a number of different programming languages and technologies.  My current area of expertise is on the Microsoft Stack (C#, F#, SQL Server, Windows and .net Core).  </p>
+<p>I've also got a keen interest in Cyber Security,  and have completed twice in the Masterclass final of the <a href="https://www.cybersecuritychallenge.org.uk/">Cyber Security Challenge</a>.</p>
+<h3>Ultra Running</h3>
+<p>When I'm not coding or with my family then I'm often out running.  I normally run in the excellent series of <a href="https://www.hardmoors110.org.uk/">Hardmoors</a> ultra races on the North York Moors.</p>
+<p>In 2018 I completed the Winter Spine race along the length of the Pennine Way.  This was a fantastic adventure but by far the hardest challenge I've every done.</p>
+<h3>Contact me</h3>
+<p>If you wish to contact me then I'm @da_betteridge on Twitter,  or come and find me at the Code-and-Coffee meetup in York each Monday and Wednesday morning.</p>
             </div>
         </div>
     </div>
