--- a/target_blog_posts/2012-03-20-sp_help.html
+++ b/target_blog_posts/2012-03-20-sp_help.html
@@ -18,7 +18,7 @@
         </div>
         <div class="item-sidebar">
             <ul>
-                <li><a href="/index.html">About me</a></li>
+                <li><a href="/target_files/about.html">About me</a></li>
                 <li><a href="/target_files/running.html">My running</a></li>
                 <li><a href="/familybikerides/index.html">Family bike rides</a></li>
                 <li><a href="/target_files/blogs.html">My blog</a></li>
