--- a/target_blog_posts/2019-01-10-HuffmanCoding.html
+++ b/target_blog_posts/2019-01-10-HuffmanCoding.html
@@ -18,7 +18,7 @@
         </div>
         <div class="item-sidebar">
             <ul>
-                <li><a href="/index.html">About me</a></li>
+                <li><a href="/target_files/about.html">About me</a></li>
                 <li><a href="/target_files/running.html">My running</a></li>
                 <li><a href="/familybikerides/index.html">Family bike rides</a></li>
                 <li><a href="/target_files/blogs.html">My blog</a></li>
@@ -30,11 +30,7 @@
         </div>
         <div class="item-content">
             <div class="content-container">
-                <hr />
-<p>layout: post
-title: Huffman Coding</p>
-<hr />
-<p>Following a conversation with David Turner after the <a href="https://meetup.com/YorkCodeDojo">YorkCodeDojo</a> on Wednesday night I thought I would have a go at implementing Huffman encoding using C#</p>
+                <p>Following a conversation with David Turner after the <a href="https://meetup.com/YorkCodeDojo">YorkCodeDojo</a> on Wednesday night I thought I would have a go at implementing Huffman encoding using C#</p>
 <p>As I couldn't remember the finer details (University was a long time ago),  it was off to Wikipedia to look it up. https://en.wikipedia.org/wiki/Huffman_coding</p>
 <p>My first step was to order the letters by the frequency in which they occured in the source text.  At this point I got a bit sidetracked as I wondered if using Linq would be a lot slower than writing a manual loop.</p>
 <p>I now have a nice reuseable timing function :-)</p>
