--- a/target_blog_posts/2019-01-27-Calling-Async-In-A-Sync-Method.html
+++ b/target_blog_posts/2019-01-27-Calling-Async-In-A-Sync-Method.html
@@ -18,7 +18,7 @@
         </div>
         <div class="item-sidebar">
             <ul>
-                <li><a href="/index.html">About me</a></li>
+                <li><a href="/target_files/about.html">About me</a></li>
                 <li><a href="/target_files/running.html">My running</a></li>
                 <li><a href="/familybikerides/index.html">Family bike rides</a></li>
                 <li><a href="/target_files/blogs.html">My blog</a></li>
@@ -30,11 +30,7 @@
         </div>
         <div class="item-content">
             <div class="content-container">
-                <hr />
-<p>layout: post
-title: Calling an asynchronous method from a synchronous one</p>
-<hr />
-<p>Although it's becoming less and less common,  there are times you will need to call an asynchronous from within a synchronous one.  For example when you are implementing an interface; within a constructor or writing a console application with an old version of c#.</p>
+                <p>Although it's becoming less and less common,  there are times you will need to call an asynchronous from within a synchronous one.  For example when you are implementing an interface; within a constructor or writing a console application with an old version of c#.</p>
 <p>Create a console app,  and start with the following code</p>
 <p>```c#
 static void Main(string[] args)
