--- a/target_blog_posts/2019-01-31-Calling_an_async_method.html
+++ b/target_blog_posts/2019-01-31-Calling_an_async_method.html
@@ -18,7 +18,7 @@
         </div>
         <div class="item-sidebar">
             <ul>
-                <li><a href="/index.html">About me</a></li>
+                <li><a href="/target_files/about.html">About me</a></li>
                 <li><a href="/target_files/running.html">My running</a></li>
                 <li><a href="/familybikerides/index.html">Family bike rides</a></li>
                 <li><a href="/target_files/blogs.html">My blog</a></li>
@@ -30,11 +30,7 @@
         </div>
         <div class="item-content">
             <div class="content-container">
-                <hr />
-<p>layout: post
-title: Calling an async method</p>
-<hr />
-<h2>Overview</h2>
+                <h2>Overview</h2>
 <p>This post is a getting started guide to using async methods.  There should be enough information to get you started without understand how it all works!</p>
 <h2>What is an asynchronous method</h2>
 <p>You can think of an asynchronous method as a function which will run on a different thread and completes executing sometime in the future.</p>
