--- a/target_files/blogs.html
+++ b/target_files/blogs.html
@@ -18,7 +18,7 @@
         </div>
         <div class="item-sidebar">
             <ul>
-                <li><a href="/index.html">About me</a></li>
+                <li><a href="/target_files/about.html">About me</a></li>
                 <li><a href="/target_files/running.html">My running</a></li>
                 <li><a href="/familybikerides/index.html">Family bike rides</a></li>
                 <li><a href="/target_files/blogs.html">My blog</a></li>
@@ -31,19 +31,21 @@
         <div class="item-content">
             <div class="content-container">
                 <p>A selection of blog entries</p>
-<p>* [2012-03-20 - Improving sp_help](https://davidbetteridge.net/target_blog_posts/2012-03-20-sp_help.html)
-* [2018-07-22-Cake](https://davidbetteridge.net/target_blog_posts/2018-07-22-Cake.html)
-* [2019-01-09-Blog](https://davidbetteridge.net/target_blog_posts/2019-01-09-Blog.html)
-* [2019-01-10-HuffmanCoding](https://davidbetteridge.net/target_blog_posts/2019-01-10-HuffmanCoding.html)
-* [2019-01-11-Base64Encoding](https://davidbetteridge.net/target_blog_posts/2019-01-11-Base64Encoding.html)
-* [2019-01-26-Async-Await-Part2](https://davidbetteridge.net/target_blog_posts/2019-01-26-Async-Await-Part2.html)
-* [2019-01-26-Async-Await](https://davidbetteridge.net/target_blog_posts/2019-01-26-Async-Await.html)
-* [2019-01-27-Calling-Async-In-A-Sync-Method](https://davidbetteridge.net/target_blog_posts/2019-01-27-Calling-Async-In-A-Sync-Method.html)
-* [2019-01-28-Extracting_Values_From_A_Task](https://davidbetteridge.net/target_blog_posts/2019-01-28-Extracting_Values_From_A_Task.html)
-* [2019-01-30-Chaining_Tasks](https://davidbetteridge.net/target_blog_posts/2019-01-30-Chaining_Tasks.html)
-* [2019-01-31-Calling_an_async_method](https://davidbetteridge.net/target_blog_posts/2019-01-31-Calling_an_async_method.html)
-* [2019-02-17-how_does_await_work](https://davidbetteridge.net/target_blog_posts/2019-02-17-how_does_await_work.html)
-* [2020-03-10-dotnet_counters](https://davidbetteridge.net/target_blog_posts/2020-03-10-dotnet_counters.html)</p>
+<ul>
+<li><a href="/target_blog_posts/2012-03-20-sp_help.html">2012-03-20 - Improving sp_help</a></li>
+<li><a href="/target_blog_posts/2018-07-22-Cake.html">2012-07-22 - Using Cake With TeamCity</a></li>
+<li><a href="/target_blog_posts/2019-01-09-Blog.html">2019-01-09 - Setting up DavidBetteridge.net</a></li>
+<li><a href="/target_blog_posts/2019-01-10-HuffmanCoding.html">2019-01-10 - Huffman Coding</a></li>
+<li><a href="/target_blog_posts/2019-01-11-Base64Encoding.html">2019-01-11 - Base64 Encoding</a></li>
+<li><a href="/target_blog_posts/2019-01-26-Async-Await-Part2.html">2019-01-26 - Async and Await in C# - Part 2</a></li>
+<li><a href="/target_blog_posts/2019-01-26-Async-Await.html">2019-01-26 - Async and Await in C# - Part 1</a></li>
+<li><a href="/target_blog_posts/2019-01-27-Calling-Async-In-A-Sync-Method.html">2019-01-27 - Calling an asynchronous method from a synchronous one</a></li>
+<li><a href="/target_blog_posts/2019-01-28-Extracting_Values_From_A_Task.html">2019-01-28 - Extracting values from a task.</a></li>
+<li><a href="/target_blog_posts/2019-01-30-Chaining_Tasks.html">2019-01-30 - Chaining Tasks</a></li>
+<li><a href="/target_blog_posts/2019-01-31-Calling_an_async_method.html">2019-01-31 - Calling an async method</a></li>
+<li><a href="/target_blog_posts/2019-02-17-how_does_await_work.html">2019-02-17 - How does await work?</a></li>
+<li><a href="/target_blog_posts/2020-03-10-dotnet_counters.html">2019-03-10 - dotnet-counters</a></li>
+</ul>
             </div>
         </div>
     </div>
