--- a/template.html
+++ b/template.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="item-header_logo">
-            <a href="/about/index"><img src="/images/david_betteridge.png" alt="Mr David Betteridge"
+            <a href="/index.html"><img src="/images/david_betteridge.png" alt="Mr David Betteridge"
                     class="top_left_logo"></a>
         </div>
         <div class="item-header_text">
@@ -18,7 +18,7 @@
         </div>
         <div class="item-sidebar">
             <ul>
-                <li><a href="/index.html">About me</a></li>
+                <li><a href="/target_files/about.html">About me</a></li>
                 <li><a href="/target_files/running.html">My running</a></li>
                 <li><a href="/familybikerides/index.html">Family bike rides</a></li>
                 <li><a href="/target_files/blogs.html">My blog</a></li>
