London to Paris

--- a/target_files/london_to_paris.html
+++ b/target_files/london_to_paris.html
@@ -31,11 +31,8 @@
         </div>
         <div class="item-content">
             <div class="content-container">
-                <h1>Running</h1>
-<p>In my free time I'm a keen runner and have competed in several ultra-marathons. These include the Winter Spine Race,  the Hardmoors 200 and the Arc of Attrition.</p>
-<p>Most of my runs can be found on <a href="https://www.strava.com/athletes/6352224">Strava</a></p>
-<p>I've been plotting my more interesting (and longer runs) on a <a href="/running/index.html">map.</a></p>
-<p>During the Summer of 2022 I (accidently) entered two 100 mile races a week apart. These were the <a href="/target_files/peak_district_100.html">Peak District 100</a> and <a href="/target_files/south_downs_100.html">South Downs 100</a></p>
+                <p>In September of 2022,  Mary and I cycled from London to Paris. </p>
+<p><a href="/london_to_paris/index.html">Click here to see our route.</a></p>
             </div>
         </div>
     </div>
