--- a/target_blog_posts/2019-01-10-HuffmanCoding.html
+++ b/target_blog_posts/2019-01-10-HuffmanCoding.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="item-header_logo">
-            <a href="/about/index"><img src="/images/david_betteridge.png" alt="Mr David Betteridge"
+            <a href="/index.html"><img src="/images/david_betteridge.png" alt="Mr David Betteridge"
                     class="top_left_logo"></a>
         </div>
         <div class="item-header_text">
@@ -20,6 +20,7 @@
             <ul>
                 <li><a href="/target_files/about.html">About me</a></li>
                 <li><a href="/target_files/running.html">My running</a></li>
+                <li><a href="/target_files/london_to_paris.html">London to Paris</a></li>
                 <li><a href="/familybikerides/index.html">Family bike rides</a></li>
                 <li><a href="/target_files/blogs.html">My blog</a></li>
                 <li><a href="https://www.meetup.com/York-Code-Dojo/">York Code Dojo</a></li>
