--- a/target_files/london_to_paris.html
+++ b/target_files/london_to_paris.html
@@ -33,6 +33,65 @@
             <div class="content-container">
                 <p>In September of 2022,  Mary and I cycled from London to Paris. </p>
 <p><a href="/london_to_paris/index.html">Click here to see our route.</a></p>
+<h2>Kit List</h2>
+<h3>David</h3>
+<ul>
+<li>Both parts of a foam bedroll cut into two pieces.  (Useful as seats)</li>
+<li>Bungee cord for attaching bedroll</li>
+<li>Lightweight sleeping bag + liner</li>
+<li>Breathable bivi bag</li>
+<li>Cup and spork</li>
+<li>Led Lenser headtorch</li>
+<li>Passport</li>
+<li>Phone + Charging cable</li>
+<li>Watch + Charging cable</li>
+<li>Bike, 2 x 35l Panniers, Lights, Spare inner tube</li>
+<li>D-lock, Cable for lock, 2 keys (one each)</li>
+<li>Cycle helmet</li>
+<li>Debit card, Credit card, small amount of Euros.  (Contactless worked fine)</li>
+<li>Basic washkit</li>
+<li>Change of clothes for Paris</li>
+<li>Book</li>
+<li>Inhaler</li>
+</ul>
+<h3>Mary</h3>
+<ul>
+<li>One person tent</li>
+<li>Sleeping bag</li>
+<li>Inflatable bedroll</li>
+<li>Cup, Bowl and KFS</li>
+<li>Phone + Charging cable</li>
+<li>Watch + Charging cable</li>
+<li>Bike, 2 x 35l Panniers, Lights, Spare inner tube</li>
+<li>D-lock, Cable for lock, 2 keys (one each)</li>
+<li>Cycle helmet</li>
+<li>Sunglasses</li>
+</ul>
+<h3>Shared</h3>
+<ul>
+<li>Lightweight gas stove + 2 x 100 bottles + lighter</li>
+<li>2 x Pans (One with a lid)</li>
+<li>Handheld GPS + Batteries (not used)</li>
+<li>EU Plug (with 2 USB sockets)</li>
+<li>USB Battery pack (didn't work very well)</li>
+<li>USB Solar charger + Shoe Lace (for attaching to bike)</li>
+<li>2 x USB cables for charging lights</li>
+<li>Multi-tool, small pump, 2 x tyre levers, puncture repair kit</li>
+<li>Sun Lotion</li>
+<li>Small first aid kit inc vaseline and paracetamol</li>
+<li>Guide book</li>
+<li>Single bin liner.  (Used as a seat,  baguette protector and for rubbish)</li>
+</ul>
+<h3>Food</h3>
+<ul>
+<li>Kendal mint cake</li>
+<li>10 x Protein cereal bars</li>
+<li>Cup-a-soups (We took too many, only need 3)</li>
+<li>4 x Super noddles (We mixed the flavours)</li>
+<li>4 x dehydrated means (Only used 2)</li>
+<li>Several packets of golden syrup porridge (we used 6)</li>
+<li>2 x packets of sweets</li>
+</ul>
             </div>
         </div>
     </div>
