--- a/target_files/london_to_paris.html
+++ b/target_files/london_to_paris.html
@@ -86,11 +86,15 @@
 <ul>
 <li>Kendal mint cake</li>
 <li>10 x Protein cereal bars</li>
-<li>Cup-a-soups (We took too many, only need 3)</li>
+<li>Cup-a-soups (We took too many, only needed 3)</li>
 <li>4 x Super noddles (We mixed the flavours)</li>
 <li>4 x dehydrated means (Only used 2)</li>
 <li>Several packets of golden syrup porridge (we used 6)</li>
 <li>2 x packets of sweets</li>
+<li>6 x Coffee Bags (used 5)</li>
+<li>Yorkshire tea bags (used 3)</li>
+<li>Fruit tea bags (used 3)</li>
+<li>Squash concentrate</li>
 </ul>
             </div>
         </div>
