--- a/target_blog_posts/2019-01-27-Calling-Async-In-A-Sync-Method.html
+++ b/target_blog_posts/2019-01-27-Calling-Async-In-A-Sync-Method.html
@@ -15,7 +15,21 @@
         </div>
         <div class="item-header_text">
             David Betteridge
+
+            <div class="filler"></div>
+
+            <div class="theme-switch-wrapper">
+                <label class="theme-switch" for="checkbox">
+                    <input type="checkbox" id="checkbox" />
+                    <div class="slider round"></div>
+                </label>
+                <em>Light Theme</em>
+            </div>
+
         </div>
+
+
+
         <div class="item-sidebar">
             <ul>
                 <li><a href="/target_files/about.html">About me</a></li>
@@ -113,6 +127,7 @@ As @kev_bite pointed out to me,  there are very few reasons not to make your met
             </div>
         </div>
     </div>
+    <script type='text/javascript' src='/theme.js'></script>
 
 </body>
 
