--- a/target_blog_posts/2019-01-30-Chaining_Tasks.html
+++ b/target_blog_posts/2019-01-30-Chaining_Tasks.html
@@ -15,7 +15,21 @@
         </div>
         <div class="item-header_text">
             David Betteridge
+
+            <div class="filler"></div>
+
+            <div class="theme-switch-wrapper">
+                <label class="theme-switch" for="checkbox">
+                    <input type="checkbox" id="checkbox" />
+                    <div class="slider round"></div>
+                </label>
+                <em>Light Theme</em>
+            </div>
+
         </div>
+
+
+
         <div class="item-sidebar">
             <ul>
                 <li><a href="/target_files/about.html">About me</a></li>
@@ -179,6 +193,7 @@ public static async Task&lt;T&gt; Bind&lt;S, T&gt;(Task&lt;S&gt; task, Func&lt;S
             </div>
         </div>
     </div>
+    <script type='text/javascript' src='/theme.js'></script>
 
 </body>
 
