--- a/target_files/london_to_paris.html
+++ b/target_files/london_to_paris.html
@@ -15,7 +15,21 @@
         </div>
         <div class="item-header_text">
             David Betteridge
+
+            <div class="filler"></div>
+
+            <div class="theme-switch-wrapper">
+                <label class="theme-switch" for="checkbox">
+                    <input type="checkbox" id="checkbox" />
+                    <div class="slider round"></div>
+                </label>
+                <em>Light Theme</em>
+            </div>
+
         </div>
+
+
+
         <div class="item-sidebar">
             <ul>
                 <li><a href="/target_files/about.html">About me</a></li>
@@ -152,6 +166,7 @@ and then we walked to the top deck to find our seats. There was a vending machin
             </div>
         </div>
     </div>
+    <script type='text/javascript' src='/theme.js'></script>
 
 </body>
 
