--- a/target_blog_posts/2018-07-22-Cake.html
+++ b/target_blog_posts/2018-07-22-Cake.html
@@ -14,18 +14,19 @@
                     class="top_left_logo"></a>
         </div>
         <div class="item-header_text">
-            David Betteridge
+            <span>David Betteridge</span>
 
             <div class="filler"></div>
 
             <div class="theme-switch-wrapper">
-                <label class="theme-switch" for="checkbox">
-                    <input type="checkbox" id="checkbox" />
-                    <div class="slider round"></div>
-                </label>
-                <em>Light Theme</em>
-            </div>
+                <em>Theme</em>
 
+                <select name="theme-selector" id="theme-selector">
+                    <option value="blue">Blue</option>
+                    <option value="dark">Dark</option>
+                    <option value="light">Light</option>
+                </select>
+            </div>
         </div>
 
 
