--- a/target_files/about.html
+++ b/target_files/about.html
@@ -48,13 +48,13 @@
             <div class="content-container">
                 <p>Hi,  I'm one of the co-founders/treasurer of <a href="https://YorkDevelopers.org">YorkDevelopers.org</a> and also organise the monthly YorkCodeDojo meetup.</p>
 <h3>Skills</h3>
-<p>I've got over 20 years of experience as a professional software developer.  During that time I've used a number of different programming languages and technologies.  My current area of expertise is on the Microsoft Stack (C#, F#, SQL Server, Windows and .net Core).  </p>
+<p>I've got over 20 years of experience as a professional software developer.  During that time I've used a number of different programming languages and technologies.  My current area of expertise is on Python, React.js, AWS and Postgres.  Previously I was using the Microsoft Stack (C#, F#, SQL Server, Windows and .net Core).  </p>
 <p>I've also got a keen interest in Cyber Security,  and have completed twice in the Masterclass final of the <a href="https://www.cybersecuritychallenge.org.uk/">Cyber Security Challenge</a>.</p>
 <h3>Ultra Running</h3>
 <p>When I'm not coding or with my family then I'm often out running.  I normally run in the excellent series of <a href="https://www.hardmoors110.org.uk/">Hardmoors</a> ultra races on the North York Moors.</p>
 <p>In 2018 I completed the Winter Spine race along the length of the Pennine Way.  This was a fantastic adventure but by far the hardest challenge I've every done.</p>
 <h3>Contact me</h3>
-<p>If you wish to contact me then I'm @da_betteridge on Twitter,  or come and find me at the Code-and-Coffee meetup in York each Monday and Wednesday morning.</p>
+<p>If you wish to contact me then I'm <a href="https://twitter.com/da_betteridge">@da_betteridge</a> on Twitter, <a href="https://www.linkedin.com/in/dbetteridge/">dbetteridge</a> in Linkedin or come and find me at the <a href="https://www.meetup.com/yorkdevelopers/">Code-and-Coffee</a> meetup in York each Wednesday morning.</p>
             </div>
         </div>
     </div>
