--- a/running/index.html
+++ b/running/index.html
@@ -52,9 +52,9 @@
                     <li><input class="route" type="checkbox" value="Foss_Way.xml" data-colour="#4000ff">Foss Walk</input></li>
                     <li><input class="route" type="checkbox" value="ebor_way_Ilkley_to_york_section.xml" data-colour="#ff008f">Ebor Way (Ilkley to York section) </input></li>
                     <li><input class="route" type="checkbox" value="Dales_high_way_to_Skipton_and_the_Leeds_Liverpool_canal_back.xml" data-colour="#ff8000">Dales High way to Skipton loop</input></li>
-                    <li><input class="route" type="checkbox" value="Harrogate_ringway.xml" data-colour="#00bfff">Harrogate Ringway (Clockwise)</input></li>
-                    <li><input class="route" type="checkbox" value="Hadrians_wall_part1.xml" data-colour="#ff0000">Hadrian's Wall Day 1</input></li>
-                    <li><input class="route" type="checkbox" value="Hadrians_wall_part2.xml" data-colour="#ff0000">Hadrian's Wall Day 2</input></li>
+                    <li><input class="route" type="checkbox" value="Harrogate_ringway.gpx" data-colour="#00bfff">Harrogate Ringway (Clockwise)</input></li>
+                    <li><input class="route" type="checkbox" value="Hadrians_wall_part1.gpx" data-colour="#ff0000">Hadrian's Wall Day 1</input></li>
+                    <li><input class="route" type="checkbox" value="Hadrians_wall_part2.gpx" data-colour="#ff0000">Hadrian's Wall Day 2</input></li>
                 </ul>                
             
                 <div class="sectionHeader"><a target="_blank" href="https://www.transpenninetrail.org.uk/">Trans Pennine Trail</a></div>
