--- a/target_files/hadrians_wall.html
+++ b/target_files/hadrians_wall.html
@@ -103,13 +103,15 @@ In my somewhat tired state, I then found it quite hard to find a route up the hi
 <li>Sandwiches,  Kendal mint cake,  4xSnickers and 3xTrekbars</li>
 </ul>
 <h3>Extras</h3>
-<p>Things I could have taken
-* Sleeping bag liner
-* Spare Torch (or batteries)
-* Reflective Top
-* Vaseline
-* Extra waterbottle
-* Duck tape for shoe repairs</p>
+<p>Things I could have taken</p>
+<ul>
+<li>Sleeping bag liner</li>
+<li>Spare Torch (or batteries)</li>
+<li>Reflective Top</li>
+<li>Vaseline</li>
+<li>Extra waterbottle</li>
+<li>Duck tape for shoe repairs</li>
+</ul>
             </div>
         </div>
     </div>
