--- a/running/index.html
+++ b/running/index.html
@@ -55,6 +55,7 @@
                     <li><input class="route" type="checkbox" value="Harrogate_ringway.gpx" data-colour="#00bfff">Harrogate Ringway (Clockwise)</input></li>
                     <li><input class="route" type="checkbox" value="Hadrians_wall_part1.gpx" data-colour="#ff0000">Hadrian's Wall Day 1</input></li>
                     <li><input class="route" type="checkbox" value="Hadrians_wall_part2.gpx" data-colour="#ff0000">Hadrian's Wall Day 2</input></li>
+                    <li><input class="route" type="checkbox" value="Harrogate_to_Leeds_via_Ilkley_moor.gpx" data-colour="#ff0000">Harrogate to Leeds via Ilkley Moor</input></li>
                 </ul>                
             
                 <div class="sectionHeader"><a target="_blank" href="https://www.transpenninetrail.org.uk/">Trans Pennine Trail</a></div>
