--- a/running/index.html
+++ b/running/index.html
@@ -38,6 +38,7 @@
 
                     <li><input class="route" type="checkbox" value="The_Peak_District_100_2022.gpx" data-colour="#ff4000">Peak District 100</input></li>
                     <li><input class="route" type="checkbox" value="south_downs_100.gpx" data-colour="#ff4000">South Downs 100</input></li>
+                    <li><input class="route" type="checkbox" value="TheLine.gpx" data-colour="#80ff00">The Line</input></li>   
                 </ul>
 
                 <div class="sectionHeader">Exploring</div>
@@ -68,12 +69,6 @@
                     <li><input class="route" type="checkbox" value="Barnsley_to_Leeds_along_the_TPT.gpx" data-colour="#80ff00">Barnsley to Leeds</input></li>                
                     <li><input class="route" type="checkbox" value="Barnsley_to_Stalybridge_along_the_trans_pennine_trail.gpx" data-colour="#80ff00">Barnsley to Stalybridge</input></li>                
                 </ul>
-
-                <div class="sectionHeader">Planning</div>
-                <ul>
-                    <li><input class="route" type="checkbox" value="TheLine.gpx" data-colour="#80ff00">Coming Soon...</input></li>   
-                </ul>
-
             </div>
         </div>
 
