--- a/running/index.html
+++ b/running/index.html
@@ -58,6 +58,7 @@
                     <li><input class="route" type="checkbox" value="Hadrians_wall_part2.gpx" data-colour="#ff0000">Hadrian's Wall Day 2</input></li>
                     <li><input class="route" type="checkbox" value="Harrogate_to_Leeds_via_Ilkley_moor.gpx" data-colour="#ff0000">Harrogate to Leeds via Ilkley Moor</input></li>
                     <li><input class="route" type="checkbox" value="rochdale_canal.gpx" data-colour="#8000ff">Manchester to Hebden Bridge (Rochdale Canal)</input></li>
+                    <li><input class="route" type="checkbox" value="Manchester_to_Huddersfield_Huddersfield_narrow_canal.gpx.gpx" data-colour="#80ff00">Manchester to Huddersfield (Huddersfield Narrow Canal)</input></li>
                     <li><input class="route" type="checkbox" value="Bridlington_Filey_Scarborough.gpx" data-colour="#8000ff">Bridlington to Filey to Scarborough</input></li>
                 </ul>                
             
